# secured

./: .gitignore  CNN.py  NeuralNetwork.py  Preprocessing.py  README.md  adult_data_augmentation.ipynb  augmentation.py  face_rec.ipynb  model_implementation.py  pyproject.toml
data/adult/: lfw_allnames.csv  lfw_readme.csv  matchpairsDevTest.csv  matchpairsDevTrain.csv  mismatchpairsDevTest.csv  mismatchpairsDevTrain.csv  pairs.csv  people.csv  peopleDevTest.csv  peopleDevTrain.csv
face_detection/: face_detection.py
